# ESP32-HORSOST

./: README.md
ESP32_ESP_NOW/: README.md
ESP32_ESP_NOW/ESP32/: MAC_ADDR.xlsx
ESP32_ESP_NOW/EspNowtoMQTTGateway/: EspNowtoMQTTGateway.ino
ESP32_ESP_NOW/SerialtoMQTTGateway/: readme.md
ESP32_HORTSOST/: ESP32_HORTSOST.ino  myDefines.h
NODE-RED_FLOW/: flows.json
WindowOpener/: WindowOpener.docx  WindowOpener.ino  myDefines.h
WindowOpener/Sources/: pinOut.xlsx
WindowOpener/WindowOpener_stl/: 4.stl  4_mod.3mf  5.3mf  5.stl  5_full.3mf  6_no_imp.stl  7_no_imp.stl  fijador.CATPart  fijador_rotula.CATPart  fijador_rotula.stl  windowAdapter.CATPart  windowAdapter.stl
adc_dma_multichan/: sdkconfig.old
adc_dma_multichan/main/: AUTOpairing_common.h  espnow_example.h  espnow_example_main.c
adc_oneshot_espnow/: CMakeLists.txt  sdkconfig
adc_oneshot_espnow/main/: AUTOpairing_common.h  espnow_example.h  espnow_example_main.c
adc_oneshot_espnow_ota_nvs/: CMakeLists.txt
adc_oneshot_espnow_ota_nvs/main/: AUTOpairing_common.h  CMakeLists.txt  espnow_example.h  espnow_example_main.c
espnow/: sdkconfig  sdkconfig.old
espnow/main/: espnow_example.h  (+1 more)
espnow_project/: CMakeLists.txt  sdkconfig  sdkconfig.old
espnow_project/components/OTAupdate_component/: CMakeLists.txt  OTAupdate_component.c
espnow_project/components/OTAupdate_component/include/: OTAupdate_component.h
espnow_project_class/: README.md  sdkconfig  sdkconfig.old
irrigationController/: irrigationController.ino  myDefines.h
weatherMonitoring/: myDefines.h  weatherMonitoring.ino
(+38 files in other folders)
